k8s/suma-ecommerce-admin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: suma-ecommerce-admin
  labels:
    name: suma-ecommerce-admin
    app: suma-ecommerce-admin
